# dzoseg

./: .gitignore  README.md  pyproject.toml  test_local.py
examples/: basic_usage.py  bulk_segmentation.py
src/dzoseg/: __init__.py  segmenter.py
src/dzoseg/models/: dzo_unigram_32000.model  dzo_unigram_32000.vocab
