[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dzoseg"
version = "0.1.1"
description = "A Dzongkha tokenizer and segmenter (Subword & Tseg)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name="Karma Wangchuk", email="karma.cst@rub.edu.bt" }]
dependencies = [
    "sentencepiece>=0.1.99",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
"Homepage" = "https://github.com/KarmaCST/dzoseg"
"Source Code" = "https://github.com/KarmaCST/dzoseg"
"Bug Tracker" = "https://github.com/KarmaCST/dzoseg/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dzoseg" = ["models/*.model", "models/*.vocab"]